--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   margin: 0;
 }
 body {
-  font-family: raleway, sans-serif;
+  font-family: open sans, sans-serif;
   background-color: #f1f1f1;
   color: #28323D;
   font-size: 1.6rem;
@@ -12,18 +12,22 @@ body {
 
 header {
     height: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
     background:#8D7471;
   }
 
-    .logo img {
-        width: 100px;
-        height: 100px;
-        padding: 10px;
-    }
-  
+  .header{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+.logo img {
+    width: 100px;
+    height: 100px;
+    padding: 10px;
+}
+
   nav ul {
     list-style: none;
     height: 100%;
@@ -33,17 +37,20 @@ header {
     font-size: 1.6rem;
     font-weight: bold
   }
-  
+
   nav a {
     text-decoration: none;
     color: #333;
     padding: 15px;
   }
-  
+
   nav a:hover {
     background-color: #FF9F1C;
 }
-  
+
+.font-ral{
+  font-family: raleway
+}
   .company-name {
     font-size:32px;
     font-weight: bold;
@@ -57,7 +64,7 @@ header {
     background-size: cover;
     position: relative;
   }
-  
+
   .banner-text {
     position: absolute;
     width: 30%;
@@ -75,7 +82,7 @@ header {
     margin: 50px;
     text-align: center;
   }
-    
+
   .banner-text p {
     font-size: 2rem;
     margin: 50px;
@@ -91,7 +98,7 @@ header {
     margin: auto;
     margin-top: 50px;
   }
-  
+
   .text-middle-left {
      width: 60%;
      text-align: center;
@@ -103,7 +110,7 @@ header {
     font-weight: bold;
     margin-bottom: 20px;
   }
-    
+
   .img-middle-right {
     width: 40%;
     height: 500px;
@@ -111,17 +118,20 @@ header {
     border-radius: 5px;
   }
 
-  .btn-container-middle {
+  .btn  {
     display: inline-block;
     text-decoration: none;
     color: #28323D;
-    padding: 10px 35px;
-    border: #28323D 1px solid;
+    padding: 10px 20px;
+    border: 1px solid #28323D;
     border-radius: 50px;
-    margin-top: 3%;
-  }
-  
-  .btn-container-middle:hover {
+    margin: auto;
+    margin-top: 20px;
+    text-align: center;
+    }
+
+
+  .btn:hover {
     background: #28323D;
     color: #FF9F1C;
   }
@@ -136,24 +146,175 @@ header {
 
 
     .container-trio img{
-      width: 450px;
-      height: 300px;
+      width: 600px;
+      height: 400px;
       border-radius: 5px;
-      padding: 50px ;
+      padding-top: 50px ;
     }
-    
 
-    .middle-bloc h2{
-      font-size: 2.5rem;
+
+    .middle-bloc h3{
+      font-size: 2rem;
       font-weight: bold;
-      
+      margin-top: 20px;
     }
 
     .middle-bloc p{
       text-align: justify;
       line-height: 1.3;
-      padding: 0 20px;
+      padding: 30px;
 
     }
+
+    .band-middle-main {
+      background:#8D7471;
+    }
+
+    .band-middle-main{
+      padding: 1%;
+    }
+    .second-title{
+      color: #FF9F1C;
+      padding: 1%;
+      font-size: 2.6rem;
+    }
+
+    .band-middle-title {
+      width: 90%;
+      margin-left: 10%;
+    }
+
+    .icons-band-middle {
+      display: flex;
+      justify-content: space-between;
+      width: 70%;
+      margin: 0 auto;
+    }
+
+    .icons-band-middle h4{
+      padding: 10px;;
+    }
+
+    .icon-band-block {
+      text-align: center;
+      width: 400px;
+    }
+
+    .section {
+      text-align: center;
+      padding: 2%;
+    }
+
+    .cards {
+      display: flex;
+      justify-content: center;
+      width: 90%;
+      margin: 0 auto;
+    }
+
+    .card {
+      width: calc(33.33% - 50px);
+      margin: 0 25px;
+      border: 1px solid #28323D;
+      border-radius: 5px;
+    }
+
+    .cards img{
+      display: block;
+      width: 600px;
+      height: 400px;
+      margin: auto;
+      border-radius: 5px;
+      padding-top: 50px ;
+    }
+
+    .card h3{
+      font-size: 2rem;
+      font-weight: bold;
+      margin-top: 20px;
+      text-align: center;
+      padding: 1%;
+    }
+
+    .card ul{
+      font-size: 1.6rem;
+      margin: 0 auto;
+      padding: 30px 0;
+      width: 80%;
+    }
+
+    .card .price{
+      font-size: 2.5rem;
+      color: #FF9F1C;
+      font-weight: bold;
+      text-align: center;
+      padding: 30px 0;
+
+    }
+
+    .btn-cars{
+      display: block;
+      padding: 10px 20px;
+      margin-top: 20px;
+      width: 30%;
+    }
+
+    .card-reviews{
+      display: flex;
+      align-items: center;
+    }
+
+    .card-reviews h6{
+     font-size: 1.5rem;
+      padding: 15px;
+    }
+
+    .reviews{
+     width: 90%;
+     text-align: left;
+     margin: auto;
+     font-style: italic;
+    }
     
+    /* formulaire */
     
+    .section-reviews{
+      text-align: center;
+      padding: 2%;
+    }
+    .form-row {
+      display: flex;
+      width: 70%;
+      margin: auto;
+      padding: 10px;
+      
+    }
+    
+    /* input */
+    
+    input {
+      width: 70%;
+      height: 45px;
+      font-size: 1rem;
+    }
+    
+    /* textarea */
+    
+    textarea {
+      width: 70%;
+      height: 100px;
+      font-size: 1rem;
+    }
+    
+    /* effet hover sur les étoiles */
+    
+    .star {
+      color: #ddd;
+      font-size: 2em;
+      margin: 0 3px;
+    }
+
+    .star:hover,
+  .star:hover ~ .star {
+  color: #FF9F1C;
+}
