--- a/style.css
+++ b/style.css
@@ -146,8 +146,9 @@ header {
 
 
     .container-trio img{
-      width: 600px;
-      height: 400px;
+      width: 20vw;
+      height: auto;
+      max-height: 250px;
       border-radius: 5px;
       padding-top: 50px ;
     }
@@ -209,6 +210,7 @@ header {
       display: flex;
       justify-content: center;
       width: 90%;
+      height: auto;
       margin: 0 auto;
     }
 
@@ -221,11 +223,13 @@ header {
 
     .cards img{
       display: block;
-      width: 600px;
-      height: 400px;
+      width: 25vw;
+      height: auto;
+      max-height: 250px;
       margin: auto;
       border-radius: 5px;
-      padding-top: 50px ;
+      padding-top: 20px;
+      
     }
 
     .card h3{
@@ -234,6 +238,10 @@ header {
       margin-top: 20px;
       text-align: center;
       padding: 1%;
+    }
+
+    .card p{
+      padding: 20px;
     }
 
     .card ul{
@@ -282,6 +290,7 @@ header {
       text-align: center;
       padding: 2%;
     }
+
     .form-row {
       display: flex;
       width: 70%;
@@ -290,20 +299,26 @@ header {
       
     }
     
-    /* input */
-    
+    .form-center{
+      width: 100%;
+    }
+
     input {
-      width: 70%;
+      width: 100%;
+      margin: auto;
       height: 45px;
-      font-size: 1rem;
+      font-size: 1.6rem;
+      border-radius: 10px;
     }
     
     /* textarea */
     
     textarea {
       width: 70%;
+      margin: auto;
       height: 100px;
-      font-size: 1rem;
+      font-size: 1.6rem;
+      border-radius: 10px;
     }
     
     /* effet hover sur les étoiles */
@@ -317,4 +332,39 @@ header {
     .star:hover,
   .star:hover ~ .star {
   color: #FF9F1C;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  background-color: #8D7471; 
+  padding: 20px;
+}
+
+.section {
+  width: 30%;
+  margin-bottom: 20px;
+}
+
+.contact-info i {
+  width: 30%;
+  margin-right: 5px;
+}
+
+.useful-links ul {
+  list-style: none;
+  padding: 0;
+  text-decoration: none;
+  color: #28323D;
+}
+
+.useful-links li {
+  margin-bottom: 5px;
+  
+}
+
+.copyright {
+  background-color: #00A6FB; /* Couleur de fond bleue */
+  text-align: center;
+  padding: 10px;
 }
