--- a/style.css
+++ b/style.css
@@ -10,6 +10,53 @@ body {
   font-size: 1.3rem;
 }
 
+/* Animation de chargement */
+
+/* .loader {
+  position: relative;
+  width: 100px;
+  height: 50px;
+  animation: moveCar 2s linear infinite;
+}
+
+.car {
+  position: absolute;
+  width: 40px;
+  height: 20px;
+  background-color: #3498db;
+  border-radius: 5px;
+  bottom: 0;
+  animation: carMove 2s linear infinite;
+}
+
+.smoke {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  background-color: #aaa;
+  border-radius: 50%;
+  bottom: 30px;
+  left: 20px;
+  opacity: 0;
+  animation: smokeAnimate 2s linear infinite;
+}
+
+@keyframes moveCar {
+  0% { left: -40px; }
+  100% { left: 100%; }
+}
+
+@keyframes carMove {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(60px); }
+}
+
+@keyframes smokeAnimate {
+  0% { opacity: 0; transform: translateX(0); }
+  50% { opacity: 1; transform: translateX(10px) rotate(45deg); }
+  100% { opacity: 0; transform: translateX(20px) rotate(90deg); }
+} */
+
 header {
   width: 100vw;
     height: 100px;
@@ -32,10 +79,8 @@ header {
     padding: 10px;
 }
 
-.hamburger-menu {
-  display: none; /* Masquer le bouton hamburger par défaut */
-  flex-direction: column;
-  cursor: pointer;
+.nav-toggler {
+  display: none;
 }
 
 .bar {
